compile config